# Saga

./: Cargo.toml  README.md  app.manifest  build.rs
src/: main.rs  privilege.rs
src/cfg/: event.rs  mod.rs  rule.rs  sturct.rs
src/cli/: parser.rs
src/control/: evtx.rs  mod.rs
src/models/: mod.rs
src/models/account_management/: mod.rs  record.rs  structs.rs  xml.rs
src/models/authentication/: record.rs  structs.rs  xml.rs
src/models/powershell/: record.rs  structs.rs  xml.rs
src/models/scheduled_task/: record.rs  structs.rs  xml.rs
src/models/service_control/: record.rs  structs.rs  xml.rs
src/models/session/: record.rs  structs.rs  xml.rs
src/parser/: definition.rs  flow.rs  mod.rs  rule.rs  utils.rs  xml.rs
src/parser/models/: account_management.rs  authentication.rs  definition.rs  mod.rs  powershell.rs  scheduled_task.rs  service_control.rs  session.rs
src/test/: parser.rs
