[package]
name = "Saga"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.57", features = ["derive"] }
crossterm = "0.29.0"
evtx = "0.11.0"
quick-xml = "0.39.0"
# ratatui = "0.30.0"
tokio = { version = "1.49.0", features = ["full"] }

[build-dependencies]
embed-resource = "3.0.6"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
