[package]
name = "Saga"
version = "0.3.1"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.5.57", features = ["derive"] }
crossterm = "0.29.0"
evtx = "0.11.0"
quick-xml = "0.39.0"
rust_xlsxwriter = { version = "0.96", features = ["constant_memory"] }
# ratatui = "0.30.0"
tokio = { version = "1.49.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_Shell_Common", "Win32_UI_WindowsAndMessaging", "Win32_System_Registry", "Win32_System_Threading"] }

[build-dependencies]
embed-resource = "3.0.6"

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
